NIFI-13356 Fixed ProtobufReader handling of repeated fields
This closes #8922

Signed-off-by: David Handermann <exceptionfactory@apache.org>